# ale-rs

./: .gitmodules  Cargo.toml  README.md
ale-sys/: Cargo.toml  build.rs  wrapper.h
ale-sys/src/: main.rs
examples/: parallel.rs  screenshots.rs
src/: atari.rs  lib.rs  parallel.rs
xtask/: Cargo.toml
xtask/src/: main.rs
